# VAE_Synth

./: CMakeLists.txt  README.md  release.sh
VAE_synth/: VAE_synth.hpp  VAE_synthModel.cpp  VAE_synthModel.hpp  VAE_synthWidgets.cpp  VAE_synthWidgets.hpp  audioUtils.cpp  audioUtils.hpp
